Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4938

Crash due to null client_vc

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.1, 7.0.0
    • Core
    • None

    Description

      Saw this crash while testing fix for TS-4813. Have a fix that checks get_netvc() returns a non-NULL. Should make a more comprehensive review on the use of get_netvc() in HttpTransact.cc/HttpSM.cc

      #0  0x000000000053ed2c in NetVConnection::get_local_addr (this=0x0) at ../iocore/net/P_NetVConnection.h:60
      #1  0x000000000057dca4 in NetVConnection::get_local_port (this=0x0) at ../iocore/net/P_NetVConnection.h:82
      #2  0x0000000000627844 in HttpTransact::initialize_state_variables_from_request (s=0x2b65700d4a98, obsolete_incoming_request=0x2b65700d51b8)
          at HttpTransact.cc:5709
      #3  0x0000000000632bd1 in HttpTransact::build_error_response (s=0x2b65700d4a98, status_code=HTTP_STATUS_BAD_GATEWAY, 
          reason_phrase_or_null=0x7fb86c "Server Hangup", error_body_type=0x7fb87a "connect#hangup", format=0x0) at HttpTransact.cc:8141
      #4  0x00000000006311fa in HttpTransact::handle_server_died (s=0x2b65700d4a98) at HttpTransact.cc:7789
      #5  0x0000000000620bbc in HttpTransact::handle_server_connection_not_open (s=0x2b65700d4a98) at HttpTransact.cc:3991
      #6  0x000000000061fd43 in HttpTransact::handle_response_from_server (s=0x2b65700d4a98) at HttpTransact.cc:3824
      #7  0x000000000061d762 in HttpTransact::HandleResponse (s=0x2b65700d4a98) at HttpTransact.cc:3401
      #8  0x00000000005fc928 in HttpSM::call_transact_and_set_next_state (this=0x2b65700d4a20, 
          f=0x61cf9a <HttpTransact::HandleResponse(HttpTransact::State*)>) at HttpSM.cc:7116
      #9  0x00000000005f6902 in HttpSM::handle_server_setup_error (this=0x2b65700d4a20, event=104, data=0x2aabd00372d8) at HttpSM.cc:5505
      #10 0x00000000005e88a4 in HttpSM::state_send_server_request_header (this=0x2b65700d4a20, event=104, data=0x2aabd00372d8) at HttpSM.cc:2053
      #11 0x00000000005eb3ba in HttpSM::main_handler (this=0x2b65700d4a20, event=104, data=0x2aabd00372d8) at HttpSM.cc:2655
      #12 0x00000000005145ac in Continuation::handleEvent (this=0x2b65700d4a20, event=104, data=0x2aabd00372d8) at ../iocore/eventsystem/I_Continuation.h:153
      #13 0x000000000079906f in write_signal_and_update (event=104, vc=0x2aabd0037140) at UnixNetVConnection.cc:174
      #14 0x00000000007992a6 in write_signal_done (event=104, nh=0x2b64f71b4cf0, vc=0x2aabd0037140) at UnixNetVConnection.cc:216
      #15 0x000000000079a475 in write_to_net_io (nh=0x2b64f71b4cf0, vc=0x2aabd0037140, thread=0x2b64f71b1010) at UnixNetVConnection.cc:547
      #16 0x0000000000799dc7 in write_to_net (nh=0x2b64f71b4cf0, vc=0x2aabd0037140, thread=0x2b64f71b1010) at UnixNetVConnection.cc:414
      #17 0x000000000079129d in NetHandler::mainNetEvent (this=0x2b64f71b4cf0, event=5, e=0x1646ac0) at UnixNet.cc:515
      #18 0x00000000005145ac in Continuation::handleEvent (this=0x2b64f71b4cf0, event=5, data=0x1646ac0) at ../iocore/eventsystem/I_Continuation.h:153
      #19 0x00000000007bc90a in EThread::process_event (this=0x2b64f71b1010, e=0x1646ac0, calling_code=5) at UnixEThread.cc:143
      #20 0x00000000007bcf0d in EThread::execute (this=0x2b64f71b1010) at UnixEThread.cc:270
      #21 0x00000000007bbf1e in spawn_thread_internal (a=0x15731f0) at Thread.cc:84
      #22 0x00002b64f5fcfaa1 in start_thread () from /lib64/libpthread.so.0
      #23 0x00000032310e893d in clone () from /lib64/libc.so.6
      

      Attachments

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              shinrich Susan Hinrichs
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 4h
                  4h