TS-4938: Avoid crashes due to NULL vc dereferences.

One more null check.

Remove server_session null checks.  And address James' comments.

clang-format

(cherry picked from commit 784e7cc8a91b48b93b57cad27ba403684880969f)

Conflicts:
	proxy/http/HttpSM.cc
	proxy/http/HttpServerSession.h